image de fond et barre de recherche

--- a/Documents/exo_airbnb/index.html
+++ b/Documents/exo_airbnb/index.html
@@ -8,8 +8,7 @@
     <title>Airbnb</title>
   </head>
   <body>
-<!--<img src="airbnb.png" alt="" />
-<video  autoplay poster="posterimage.jpg"muted loop>
+<!--<video  autoplay poster="posterimage.jpg" muted loop>
   <source src="http://" type="video/mp4">
 </video>-->
     <section>
@@ -30,10 +29,10 @@
         </div>
           <div class="search">
             <div class="searchbar text-center">
-              <input class="where" type="search" name="lieu" placeholder=" Où ?" value=""/>
-              <input type="text" class="bouton" onfocus="(this.type='date')" name="date" value="Arrivée"/>
-              <input type="text" class="bouton" onfocus="(this.type='date')" name="date" value="--> Départ"/>
-              <select class="" name="nb_voyageur" >
+              <input class="where noborder" type="search" name="lieu" placeholder=" Où ?" value=""/>
+              <input type="text" class="bouton noborder" onfocus="(this.type='date')" name="date" value=" Arrivée"/>
+              <input type="text" class="bouton noborder" onfocus="(this.type='date')" name="date" value=" --> Départ"/>
+              <select class="bouton noborder" name="nb_voyageur" >
                 <option class="bouton">1 voyageur</option>
                 <option class="bouton">2 voyageurs</option>
                 <option class="bouton">3 voyageurs</option>
